Bug 403887: disable broken window-resizer on GTK.  Patch by Michael Ventnor <ventnor.bugzilla@yahoo.com.au>, r+sr=roc, a=dsicore